src/test/ui/E0501.ast.stderr
error[E0501]: cannot borrow `*a` as mutable because previous closure requires unique access
  --> $DIR/E0501.rs:18:23
   |
LL |     let bar = || {
   |               -- closure construction occurs here
LL |         inside_closure(a)
   |                        - previous borrow occurs due to use of `a` in closure
LL |     };
LL |     outside_closure_1(a);
   |                       ^ borrow occurs here
...
LL | }
   | - borrow from closure ends here

error[E0501]: cannot borrow `*a` as immutable because previous closure requires unique access
  --> $DIR/E0501.rs:21:23
   |
LL |     let bar = || {
   |               -- closure construction occurs here
LL |         inside_closure(a)
   |                        - previous borrow occurs due to use of `a` in closure
...
LL |     outside_closure_2(a);
   |                       ^ borrow occurs here
...
LL | }
   | - borrow from closure ends here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0501`.
